[project]
name = "vgdb-efgi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "psycopg2>=2.9.10",
    "requests>=2.32.4",
    "vgdb-general",
]

[tool.uv.sources]
vgdb-general = { git = "https://github.com/stepanosokin/vgdb_general.git" }
